--- a/app/src/main/res/layout/activity_measurments.xml
+++ b/app/src/main/res/layout/activity_measurments.xml
@@ -5,17 +5,28 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Measurments">
+    tools:context=".Measurments"
+    android:src="@drawable/ic_add_black_24dp">
 
-    <TextView
-        android:id="@+id/message"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/darker_gray"
+        tools:listitem="@layout/recycler_view_item"
+        >
+
+    </android.support.v7.widget.RecyclerView>
+
+    <Button
+        android:id="@+id/add_word"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="Misure"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:onClick="sendword"
+        android:text="ADD"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerview"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintLeft_toLeftOf="@+id/navigation" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
