--- a/app/src/main/res/layout/activity_graphs.xml
+++ b/app/src/main/res/layout/activity_graphs.xml
@@ -5,6 +5,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Graphs">
+    <TableLayout
+        android:layout_marginTop="10dp"
+        android:id="@+id/table_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TableRow
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:id="@+id/table_row1"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/name"
+                android:fontFamily="serif"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:textColor="#000"
+                android:text="Systolic"/>
+            <TextView
+                android:id="@+id/age"
+                android:textColor="#000"
+                android:fontFamily="serif"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:text="Diastolic"/>
+            <TextView
+                android:textColor="#000"
+                android:id="@+id/position"
+                android:fontFamily="serif"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:text="Time"/>
+
+        </TableRow>
+        <View
+            android:layout_height="3dip"
+            android:layout_width="match_parent"
+            android:background="#ff0000"/>
+    </TableLayout>
+    // add a listview to display our table records
+
+    <ListView
+        android:id="@+id/records_view"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        app:layout_constraintTop_toBottomOf="@+id/table_layout"
+        tools:layout_editor_absoluteX="0dp"></ListView>
+
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -15,11 +67,5 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottommenu" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Graphs"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="195dp" />
+
 </android.support.constraint.ConstraintLayout>
