--- a/app/src/main/res/layout/activity_measurments.xml
+++ b/app/src/main/res/layout/activity_measurments.xml
@@ -8,23 +8,14 @@
     tools:context=".Measurments"
     android:src="@drawable/ic_add_black_24dp">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/darker_gray"
-        tools:listitem="@layout/recycler_view_item"
-        >
 
-    </android.support.v7.widget.RecyclerView>
 
     <Button
         android:id="@+id/add_word"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="sendword"
         android:text="ADD"
-        app:layout_constraintBottom_toBottomOf="@+id/recyclerview"
+        android:onClick="AddMeasure"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintLeft_toLeftOf="@+id/navigation" />
 
