--- a/app/src/main/res/layout/activity_graphs.xml
+++ b/app/src/main/res/layout/activity_graphs.xml
@@ -43,20 +43,34 @@
                 android:text="Time"/>
 
         </TableRow>
+
         <View
-            android:layout_height="3dip"
+            android:id="@+id/redbar"
             android:layout_width="match_parent"
-            android:background="#ff0000"/>
+            android:layout_height="3dip"
+            android:background="#ff0000" />
     </TableLayout>
-    // add a listview to display our table records
 
-    <ListView
-        android:id="@+id/records_view"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        app:layout_constraintTop_toBottomOf="@+id/table_layout"
-        tools:layout_editor_absoluteX="0dp"></ListView>
+        android:layout_height="match_parent"
+        android:layout_marginTop="42dp"
+        android:layout_marginBottom="64dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintTop_toBottomOf="@+id/table_layout">
 
+        <ListView
+            android:id="@+id/records_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="8dp"
+            android:layout_weight="1"
+            android:scrollbars="vertical"
+            android:smoothScrollbar="true"
+            tools:layout_editor_absoluteX="10dp" />
+    </LinearLayout>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
