--- a/app/src/main/res/layout/activity_planning.xml
+++ b/app/src/main/res/layout/activity_planning.xml
@@ -6,13 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".Planning">
 
-    <TextView
-        android:id="@+id/textView2"
+    <ListView
+        android:id="@+id/AlarmList"
+        android:layout_width="395dp"
+        android:layout_height="715dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Planning"
-        tools:layout_editor_absoluteX="178dp"
-        tools:layout_editor_absoluteY="169dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_vertical"
+        android:layout_marginEnd="16dp"
+        android:text="Add a new alarm"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="273dp" />
+
+    <TextView
+        android:id="@+id/Alarm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
